--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,19 +1,8 @@
-<nav class="navbar navbar-expanded-sm" bg-light>
-  <div class="container-fluid">
-    <ul class = "navbar-nav">
-      <li class = "nav-item">
-        <a routerLink="users/create" class="nav-link" routerLinkActive="active ">
-          create a new user
-        </a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="users" class="nav-link" routerLinkActive="active ">
-          users
-        </a>
-      </li>
-    </ul>
+<div class="content">
+    <div class="content-textbox">
+      Título de eleitor
+    </div>
+  <div class="content-label">
+    <label><input type="number" /></label>
   </div>
-</nav>
-<div class="container">
-  <router-outlet></router-outlet>
 </div>
